changed name of HTML variables (system is not working anymore)

--- a/mylist/templates/Koop_1.html
+++ b/mylist/templates/Koop_1.html
@@ -41,14 +41,14 @@
 
 <form onsubmit="eingabe_return(); return false;">
     &nbsp;&nbsp;
-    <label for="artikel_manual">Artikel</label>
-    <input type="text" id="artikel_manual" name="textfeld" maxlength="200">
+    <label for="artikel_id">Artikel</label>
+    <input type="text" id="artikel_id" name="artikel" maxlength="200">
     &nbsp;&nbsp;&nbsp;
-    <label for="stk_kg_manual">Menge in kg/Stk:</label>
-    <input type="number" id="stk_kg_manual" name="stk_kg" step="0.001" min="0" required>
+    <label for="stk_kg_id">Menge in kg/Stk:</label>
+    <input type="number" id="stk_kg_id" name="stk_kg" step="0.001" min="0" required>
     &nbsp;&nbsp;&nbsp;
-    <label for="preis_manual">Preis in €:</label>
-    <input type="number" id="preis_manual" name="stk_kg" step="0.01" min="-100" required>
+    <label for="preis_id">Preis in €:</label>
+    <input type="number" id="preis_id" name="preis" step="0.01" min="-100" required>
 
     <input type="submit" class="unvisible">
 </form>
@@ -93,12 +93,14 @@
     <script>
         let token = '{{ csrf_token }}';
 
+        // delay function to reload the HTML/website
         function delay_reload(time) {
             setTimeout(function() {
                 location.reload();
             }, time);
         }
 
+        // add an article/einkauf
         function hinzufuegen() {
             addItemManually2('{{ Nr_id }}');
             setTimeout(function() {
@@ -107,6 +109,7 @@
             delay_reload(1000)
         }
 
+        // Delete an article with given number
         function loeschen() {
             deleteItem('{{ Nr_id }}')
             setTimeout(function() {
@@ -115,6 +118,7 @@
             delay_reload(1000)
         }
 
+        // this happens when the return-key is pressed
         function eingabe_return() {
             addItemManually2('{{ Nr_id }}');
             setTimeout(function() {
@@ -123,11 +127,13 @@
             delay_reload(1000)
         }
 
+        // building sum of all open articles
         function Summe() {
             sum('{{ Nr_id }}');
             setTimeout(location.reload(), 400);
         }
 
+        // Building a time-stamp
         function getFormattedDate() {
             var now = new Date();
             var year = now.getFullYear().toString().substr(-2); // Letzte zwei Ziffern des Jahres
@@ -137,6 +143,7 @@
             return year + month + day + '_';
         }
 
+        // setting up a HTML title with timestamp to easily print the list with a given name (e.g. as PDF)
         function displayDateStamp() {
             var dateStamp = getFormattedDate();
             var membername = '{{ page_membername }}';
@@ -149,6 +156,7 @@
 
 </body>
 
+<!-- updating the timestamp on reload -->
 <body onload="displayDateStamp()">
     <p><span id="dateStamp"></span></p>
 </body>
