--- a/mylist/static/css/style.css
+++ b/mylist/static/css/style.css
@@ -36,7 +36,7 @@ input[type="number"] {
     padding: 5px;           /* Innenabstand für bessere Lesbarkeit */
 }
 
-#namenListe {
+#namenListe, #sel_frischware, #sel_obst {
     width: 500px;
     height: 50px;
     font-size: 33px;
