--- a/mylist/templates/Koop_1.html
+++ b/mylist/templates/Koop_1.html
@@ -39,42 +39,72 @@
     </header>
 
     <form>
-        <label for="sel_frischware">Frischware: </label>
-        <select id="sel_frischware" name="sel_frischware" onchange="Frischware()">
+        <br>
+        &nbsp;
+        <label for="sel_frischware">Frischware</label>&nbsp;&nbsp; 
+        <select id="sel_frischware" name="sel_frischware" onchange="Wert_aus_Preisliste_holen('sel_frischware')">
+            <option value="" selected disabled hidden>Bitte Auswählen</option>
             {% for row in preise_frischware %}
-                <option value="{{ row.price }}">{{ row.name }} - {{ row.price }} €</option>
+                <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
             {% endfor %}
         </select>    
-    </form>
-    <form>
-        <label for="sel_obst">Obst: </label>
-        <select id="sel_obst" name="sel_obst" onchange="Frischware()">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+        <label for="sel_gemuese">Gemüse</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <select id="sel_gemuese" name="sel_gemuese" onchange="Wert_aus_Preisliste_holen('sel_gemuese')">
+            <option value="" selected disabled hidden>Bitte Auswählen</option>
+            {% for row in preise_gemuese %}
+                <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
+            {% endfor %}
+        </select>  
+        <br><br>
+        &nbsp; 
+        <label for="sel_obst">Obst</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <select id="sel_obst" name="sel_obst" onchange="Wert_aus_Preisliste_holen('sel_obst')">
+            <option value="" selected disabled hidden>Bitte Auswählen</option>
             {% for row in preise_obst %}
-                <option value="{{ row.price }}">{{ row.name }} - {{ row.price }} €</option>
+                <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
+            {% endfor %}
+        </select>  
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+        <label for="sel_trockenware">Trockenware</label>&nbsp;&nbsp;
+        <select id="sel_trockenware" name="sel_trockenware" onchange="Wert_aus_Preisliste_holen('sel_trockenware')">
+            <option value="" selected disabled hidden>Bitte Auswählen</option>
+            {% for row in preise_trockenware %}
+                <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
+            {% endfor %}
+        </select>    
+        <br><br>
+        &nbsp; 
+        <label for="sel_sonstiges">Sonstiges</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <select id="sel_sonstiges" name="sel_sonstiges" onchange="Wert_aus_Preisliste_holen('sel_sonstiges')">
+            <option value="" selected disabled hidden>Bitte Auswählen</option>
+            {% for row in preise_sonstiges %}
+                <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
             {% endfor %}
         </select>    
     </form>
+    <hr>
+    <form onsubmit="eingabe_return(); return false;">
+        &nbsp;&nbsp;
+        <label for="artikel_manual">Artikel</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="text" id="artikel_manual" name="textfeld" maxlength="200">
+        &nbsp;&nbsp;&nbsp;
+        <label for="stk_kg_manual">Menge in kg/Stk:</label>
+        <input type="number" id="stk_kg_manual" name="stk_kg" step="0.001" min="0" required>
+        &nbsp;&nbsp;&nbsp;
+        <label for="preis_manual">Preis in €:</label>
+        <input type="number" id="preis_manual" name="stk_kg" step="0.01" min="-100" required>
 
-<form onsubmit="eingabe_return(); return false;">
-    &nbsp;&nbsp;
-    <label for="artikel_manual">Artikel</label>
-    <input type="text" id="artikel_manual" name="textfeld" maxlength="200">
-    &nbsp;&nbsp;&nbsp;
-    <label for="stk_kg_manual">Menge in kg/Stk:</label>
-    <input type="number" id="stk_kg_manual" name="stk_kg" step="0.001" min="0" required>
-    &nbsp;&nbsp;&nbsp;
-    <label for="preis_manual">Preis in €:</label>
-    <input type="number" id="preis_manual" name="stk_kg" step="0.01" min="-100" required>
-
-    <input type="submit" class="unvisible">
-</form>
-
-    &nbsp;&nbsp;&nbsp;
-
-    <button onclick="hinzufuegen()">Hinzufügen</button>
-    <button onclick="loeschen()">Löschen</button>
-    <button onclick="Summe()">Summe</button>
+        <input type="submit" class="unvisible">
+    </form>
     <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+    <button onclick="hinzufuegen()">Hinzufügen</button>&nbsp;&nbsp;
+    <button onclick="loeschen()">Löschen</button>&nbsp;&nbsp;
+    <button onclick="Summe()">Summe</button>
+
+    <hr>
 
     <table id="einkaufsliste">
         <thead>
@@ -88,8 +118,9 @@
         </thead>
 
         {% for row in all_items %}
-
+        
             <tbody>
+
                 <tr>
                     <td>{{ row.id }}</td>
                     <td>{{ row.created_at }}</td>
@@ -161,13 +192,16 @@
             document.title = dateStamp + membername;
         }
 
-        function Frischware() {
-            var selectedIndex = document.getElementById("sel_frischware").selectedIndex;
-            var ausgewaehlterText = document.getElementById("sel_frischware").options[selectedIndex].text;
-            var dropdown = document.getElementById("sel_frischware"); // JavaScript-Code, um die ausgewählte Nummer anzuzeigen
+        function Wert_aus_Preisliste_holen(Selektor) {
+            var selectedIndex = document.getElementById(Selektor).selectedIndex;
+            var ausgewaehlterText = document.getElementById(Selektor).options[selectedIndex].text;
+            let string1 = ausgewaehlterText.split(" - ");   // String aufteilen (um Artikelname zu erhalten)
+            let string2 = string1[1].split(" €");           // String aufteilen (um Preis in € zu erhalten)
+            console.log(string1[0]); // Debugging
+            console.log(string2[0]); // Debugging
 
-            //addy(dropdown.value - 1)
-            delay_reload(1000)           
+            document.getElementById("artikel_manual").value = string1[0];   // Artikelname schreiben in Eingabe-Element
+            document.getElementById("preis_manual").value = string2[0];     // Preis in Eingabeelement schreiben
         }
     </script>
 
