Fokus setzen auf Mengen-Feld nach einer Auswahl eines Artikels

--- a/mylist/templates/Koop_1.html
+++ b/mylist/templates/Koop_1.html
@@ -202,6 +202,8 @@
 
             document.getElementById("artikel_manual").value = string1[0];   // Artikelname schreiben in Eingabe-Element
             document.getElementById("preis_manual").value = string2[0];     // Preis in Eingabeelement schreiben
+
+            document.getElementById("stk_kg_manual").focus();   // Um die Benutzereingabe zu erleichtern, wird nach dem Auswählen eines Artikels das Mengen-Feld in den Fokus gesetzt
         }
     </script>
 
