--- a/mylist/templates/finanzdienst.html
+++ b/mylist/templates/finanzdienst.html
@@ -21,6 +21,11 @@
 
 <body>
 
+    {% load static %}
+    <img src="{% static 'finanzdienst.jpg' %}" alt="Finanzdienst">
+  
+    <br><br>
+    
     <button onclick="book_all()">Alle abrechnen</button>&nbsp;&nbsp;
     <br><br>
     <div style="text-indent:10px;">Was passiert nach "alle abrechnen":</div>
