--- a/mylist/templates/Koop_1.html
+++ b/mylist/templates/Koop_1.html
@@ -41,49 +41,58 @@
     <form>
         <br>
         &nbsp;
-        <label for="sel_frischware">Frischware</label>&nbsp;&nbsp; 
+        <label for="sel_frischware">Frischware</label>
+        &nbsp;
         <select id="sel_frischware" name="sel_frischware" onchange="Wert_aus_Preisliste_holen('sel_frischware')">
             <option value="" selected disabled hidden>Bitte Auswählen</option>
             {% for row in preise_frischware %}
                 <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
             {% endfor %}
         </select>    
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-        <label for="sel_gemuese">Gemüse</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <br>
+        &nbsp;
+        <label for="sel_gemuese">Gemüse</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <select id="sel_gemuese" name="sel_gemuese" onchange="Wert_aus_Preisliste_holen('sel_gemuese')">
             <option value="" selected disabled hidden>Bitte Auswählen</option>
             {% for row in preise_gemuese %}
                 <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
             {% endfor %}
         </select>  
-        <br><br>
-        &nbsp; 
-        <label for="sel_obst">Obst</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <br>
+        &nbsp;
+        <label for="sel_obst">Obst</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <select id="sel_obst" name="sel_obst" onchange="Wert_aus_Preisliste_holen('sel_obst')">
             <option value="" selected disabled hidden>Bitte Auswählen</option>
             {% for row in preise_obst %}
                 <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
             {% endfor %}
         </select>  
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+        <br>  
+        &nbsp;
         <label for="sel_fleisch">Fleisch</label>&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <select id="sel_fleisch" name="sel_fleisch" onchange="Wert_aus_Preisliste_holen('sel_fleisch')">
             <option value="" selected disabled hidden>Bitte Auswählen</option>
             {% for row in preise_fleisch %}
                 <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
             {% endfor %}
         </select>    
-        <br><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-        <label for="sel_getraenke">Getränke</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <br>
+        &nbsp;
+        <label for="sel_getraenke">Getränke</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;
         <select id="sel_getraenke" name="sel_getraenke" onchange="Wert_aus_Preisliste_holen('sel_getraenke')">
             <option value="" selected disabled hidden>Bitte Auswählen</option>
             {% for row in preise_getraenke %}
                 <option value="{{ row.price }}">[{{ row.type }}] {{ row.name }} - {{ row.price }} €</option>
             {% endfor %}
         </select>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-        <label for="sel_tiefkuehl">Tiefkühl</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <br>  
+        &nbsp;
+        <label for="sel_tiefkuehl">Tiefkühl</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <select id="sel_tiefkuehl" name="sel_tiefkuehl" onchange="Wert_aus_Preisliste_holen('sel_tiefkuehl')">
             <option value="" selected disabled hidden>Bitte Auswählen</option>
             {% for row in preise_tiefkuehl %}
