--- a/mylist/templates/finanzdienst.html
+++ b/mylist/templates/finanzdienst.html
@@ -23,23 +23,51 @@
 
     {% load static %}
     <img src="{% static 'finanzdienst.jpg' %}" alt="Finanzdienst">
-  
+
+    <header>
+        <h1>Prozess Finanzdienst</h1>
+        <div style="margin-left: auto; padding-right: 12px;">
+        </div>
+    </header>
     <br><br>
-    
+    <div style="text-indent:10px;">1. Summen in Konto übertragen</div>
+    <div style="text-indent:10px;">2. ggf. Miete auf Konto anrechnen</div>
+    <div style="text-indent:10px;">3. Einzahlungen buchen</div>
+    <div style="text-indent:10px;">4. Alles abrechnen / Listen leeren</div>
+    <br>
+
+    <header>
+        <h1>Alle Artikel abrechnen</h1>
+        <div style="margin-left: auto; padding-right: 12px;">
+        </div>
+    </header>
+    <br><br>
     <button onclick="book_all()">Alle abrechnen</button>&nbsp;&nbsp;
     <br><br>
-    <div style="text-indent:10px;">Was passiert nach "alle abrechnen":</div>
+    <div style="text-indent:10px;">Was passiert nach "alle abrechnen"?</div>
     <div style="text-indent:20px;">1. Kein Artikel wird gelöscht</div>
     <div style="text-indent:20px;">2. Alle Artikel aller Personen verschwinden aus der aktiven Ansicht</div>
     <div style="text-indent:20px;">3. Die aktuelle Waren-Summe aller Personen ist damit NULL</div>
+    <br>
+
+    <header>
+        <h1>Miete auf Kontos buchen<h1>
+        <div style="margin-left: auto; padding-right: 12px;">
+        </div>
+    </header>
+    <br><br>
+    <button onclick="pay_rent()">Miete abbuchen</button>&nbsp;&nbsp;
+    <div style="text-indent:10px;">Die Miete sollte beim ersten Finanzdienst eines Monats abgerechnet werden</div>
+    <br><br>
+    <div style="text-indent:10px;">Was passiert nach "Miete abbuchen"?</div>
+    <div style="text-indent:20px;">1. Jede Person erhält eine Negativbuchung zur Miete</div>
+    <div style="text-indent:20px;">2. Personenanzahl ist in Member-Informationen hinterlegt</div>
     <br>
 
     <script>
         let token = '{{ csrf_token }}';
 
         function book_all() {
-            // console.log("Hello World");
-            
             // Zeigt eine Bestätigungsabfrage an
             const userConfirmed = confirm("Wollen Sie wirklich fortfahren?");
 
@@ -58,6 +86,24 @@
 
         }
 
+        function pay_rent() {
+            // Zeigt eine Bestätigungsabfrage an
+            const userConfirmed = confirm("Wollen Sie wirklich fortfahren?");
+
+            if (userConfirmed) {
+                let formData = new FormData();
+                formData.append('csrfmiddlewaretoken', token);
+
+                fetch(('/finanzdienst/'),{
+                        method: 'POST',
+                        body: formData
+                });
+                alert("Alle Einkäufe wurden als 'ABGERECHNET' gebucht");
+            } else {
+                alert("Sie haben auf Abbrechen geklickt");
+            }
+
+        }
     </script>
 
 </body>
