--- a/mylist/templates/Koop_7.html
+++ b/mylist/templates/Koop_7.html
@@ -34,6 +34,8 @@
         &nbsp;
         {{ page_membername }} 
         &nbsp;
+        - {{ page_persons }} Personen 
+        &nbsp;
         (Summe: {{ page_sum }} €)
         </h1>
     </header>
