--- a/mylist/templates/finanzdienst.html
+++ b/mylist/templates/finanzdienst.html
@@ -30,24 +30,23 @@
         </div>
     </header>
     <br><br>
-    <div style="text-indent:10px;">1. Summen in Konto übertragen</div>
-    <div style="text-indent:10px;">2. ggf. Miete auf Konto anrechnen</div>
-    <div style="text-indent:10px;">3. Einzahlungen buchen</div>
-    <div style="text-indent:10px;">4. Alles abrechnen / Listen leeren</div>
+    <div style="text-indent:10px;">1. PDF Übersicht drucken</div>    
+    <div style="text-indent:10px;">2. Summen in Konto verbuchen (Button)</div>
+    <div style="text-indent:10px;">3. Miete auf Konto verbuchen (Button) - nur einmal am Anfang des Monats</div>
+    <div style="text-indent:10px;">4. Einzahlungen auf Konto buchen (manueller Prozess)</div>
     <br>
 
     <header>
-        <h1>Alle Artikel abrechnen</h1>
+        <h1>Alle Summen verbuchen</h1>
         <div style="margin-left: auto; padding-right: 12px;">
         </div>
     </header>
     <br><br>
-    <button onclick="book_all()">Alle abrechnen</button>&nbsp;&nbsp;
+    <button onclick="sum_and_book_all()">Alle Summen verbuchen</button>&nbsp;&nbsp;
     <br><br>
-    <div style="text-indent:10px;">Was passiert nach "alle abrechnen"?</div>
-    <div style="text-indent:20px;">1. Kein Artikel wird gelöscht</div>
-    <div style="text-indent:20px;">2. Alle Artikel aller Personen verschwinden aus der aktiven Ansicht</div>
-    <div style="text-indent:20px;">3. Die aktuelle Waren-Summe aller Personen ist damit NULL</div>
+    <div style="text-indent:10px;">Was passiert nach "Alle Summen verbuchen"?</div>
+    <div style="text-indent:20px;">1. Alle aktuellen Summen der Einkaufslisten werden in die Kontos verbucht</div>
+    <div style="text-indent:20px;">2. Die Einkaufslisten werden geleert ("Alle Artikel abrechnen")</div>
     <br>
 
     <header>
@@ -62,6 +61,21 @@
     <div style="text-indent:10px;">Was passiert nach "Miete abbuchen"?</div>
     <div style="text-indent:20px;">1. Jede Person erhält eine Negativbuchung zur Miete</div>
     <div style="text-indent:20px;">2. Personenanzahl ist in Member-Informationen hinterlegt</div>
+    <br>
+
+    <header>
+        <h1>Alle Artikel abrechnen (OPTIONAL)</h1>
+        <div style="margin-left: auto; padding-right: 12px;">
+        </div>
+    </header>
+    Wird im Regelfall nicht benötigt, da die Artikel bereits bei "Alle Summen verbuchen" aus der aktuellen Einkaufsliste entfernt werden<br>
+    <br><br>
+    <button onclick="book_all()">Alle abrechnen</button>&nbsp;&nbsp;
+    <br><br>
+    <div style="text-indent:10px;">Was passiert nach "alle abrechnen"?</div>
+    <div style="text-indent:20px;">1. Kein Artikel wird gelöscht</div>
+    <div style="text-indent:20px;">2. Alle Artikel aller Personen verschwinden aus der aktiven Ansicht</div>
+    <div style="text-indent:20px;">3. Die aktuelle Waren-Summe aller Personen ist damit NULL</div>
     <br>
 
     <script>
@@ -104,6 +118,26 @@
             }
 
         }
+
+        function sum_and_book_all() {
+            // Zeigt eine Bestätigungsabfrage an
+            const userConfirmed = confirm("Wollen Sie wirklich fortfahren?");
+
+            if (userConfirmed) {
+                let formData = new FormData();
+                formData.append('csrfmiddlewaretoken', token);
+
+                fetch(('/finanzdienst/sum_and_book_all'),{
+                        method: 'POST',
+                        body: formData
+                });
+                alert("Summen wurden verbucht");
+            } else {
+                alert("Sie haben auf Abbrechen geklickt");
+            }
+
+        }
+
     </script>
 
 </body>
